--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "script2video",
   "private": true,
@@ -9,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
+    "react": "^18.3.1",
     "recharts": "^3.5.1",
     "lucide-react": "^0.555.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.30.0"
+    "react-dom": "^18.3.1",
+    "@google/genai": "^1.30.0",
+    "@clerk/clerk-react": "^5.26.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^5.3.4"
   }
 }
