--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.555.0",
     "react-dom": "^18.3.1",
     "@google/genai": "^1.30.0",
-    "@clerk/clerk-react": "^5.26.0"
+    "@clerk/clerk-react": "^5.26.0",
+    "@clerk/backend": "^1.15.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
