--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "script2video",
   "private": true,
@@ -10,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "recharts": "^3.5.1",
-    "lucide-react": "^0.555.0",
-    "react-dom": "^18.3.1",
-    "@google/genai": "^1.30.0",
+    "@clerk/backend": "^1.15.1",
     "@clerk/clerk-react": "^5.26.0",
-    "@clerk/backend": "^1.15.1"
+    "@google/genai": "^1.30.0",
+    "@xyflow/react": "^12.10.0",
+    "lucide-react": "^0.555.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^3.5.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
