--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "script2video",
+  "name": "esheep",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
